--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
+//    implementation 'com.github.GGJin:LivePermissions:1.0.0'
     implementation project(path: ':livepermissions')
     implementation project(path: ':utils')
 
