--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-//    implementation 'com.github.GGJin:LivePermissions:1.0.0'
-    implementation project(path: ':livepermissions')
+   implementation 'com.github.GGJin:LivePermissions:1.0.1'
+//    implementation project(path: ':livepermissions')
     implementation project(path: ':utils')
 
 }
